lab1/Test/L1-A-8-16.output
Error Type B at Line 24
Error Type B at Line 46
Error Type B at Line 46
