lab1/Test/L1-A-8-16.cmm
struct lkwq8kQzpimyicAB7LP ;
int ThDXic2cv4noVa2S [ 766624499 ] 
;
struct {
  int Gu6Wmsqg6pSIBi ;
  int JG7 ;
  int u5KB ;
  struct k5zmxD07iEdBgb {
    struct WC pCB7Ulpa ;
  }MRogNZiwi65Qjy2eN ;
};
struct csqvcd2OM0rFAs G61PGkKhSZx4iB88tAK ( int Queg_2EO1g5GZflI 
  , struct {
}olv1KWYmQkYzVgs0L ) {
  float kH9vfb , lChTQGaO1 = WQft62Pc ;
  while ( KKmZhXFoD )   if ( NnCnE6zXQ85IBhkm )   J3BH6G5t 
    ;
else   return zUNQ6Wngo = VBeSbw1kh30pPPtQr || oAd0Axj0d 
    && BrTZulzTaB <= O8YoPcBTqwcom6O8 + - ! ! Ex8hf [ 
    WVTOkmrZu1C0WZydul != Gm3Z98iI7B - r3v9Z46wmd6q4u4QLy 
    * _KnX ( Ox0SmroS0L9ViTj || URewJksaM >= OK_U / ( 
    OOhd8JE96qiPW || mSfAkTfIB4ku7oz2 && weochvx4qewaTI5jWA 
    > UVZOSm99xokn - ( a1nTfKU - EI4Zoi ( Qfd6bWf , WrUa7M6UUHeQ25mjZGI 
    wI ) < ( dyjbuUX4OLlV . TK6LYM40riaXkGAI8EU || ! aG4af 
    ) ) . oZror ) - ! ! qT8u5Vdgq . UnZWnFSHVFYcMPIREJY 
    * - 1281815177.1509697003 == 1647888038 . iH2QV2AzPxo 
    ) ] / J0iEAMzDff3ejH ( ) ;


}
int Bqxrxtv , fnyx5Sng0pWtJJGG8VG 

;
int BAP ( ) {
}
int ;
int v4NkI ( ) {
}
int ;
int ;
int ;
int OTzL1ta8USgVtBp_rn ( ) {
  if ( CPV58RAV4OTlZXF15zo )   QQfmTx7UKLHx8yi_rMu 
    ;
else   if ( pHUCwYND ) {
int   }. 

}
